--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,4 +1,5 @@
 workflows:
+
   repvx_app_preview:
     name: RepVX Dual Platform Preview
     max_build_duration: 60
@@ -21,3 +22,23 @@ workflows:
     artifacts:
       - build/app/outputs/flutter-apk/app-debug.apk
       - build/ios/iphonesimulator/Runner.app
+
+  repvx_play_release:
+    name: RepVX Play Store Release
+    max_build_duration: 60
+    environment:
+      flutter: stable
+    scripts:
+      - name: Bağımlılıkları yükle
+        script: |
+          flutter pub get
+      - name: Release .aab oluştur
+        script: |
+          flutter build appbundle --release
+    artifacts:
+      - build/app/outputs/bundle/release/app-release.aab
+    publishing:
+      google_play:
+        credentials: $GCLOUD_SERVICE_ACCOUNT
+        track: internal
+        submit_as_draft: true
