--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -9,3 +9,8 @@ android.enableJetifier=true
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
+
+MYAPP_KEYSTORE=android/app/repvx.keystore
+MYAPP_KEY_ALIAS=repvx
+MYAPP_KEY_PASSWORD=123456
+MYAPP_STORE_PASSWORD=123456
