--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -63,9 +63,9 @@ workflows:
           flutter build ipa --release --no-codesign
 
     publishing:
-      app_store_connect:
-        api_key: $APPSTORE_PRIVATE_KEY
-        key_id: $APPSTORE_KEY_ID
-        issuer_id: $APPSTORE_ISSUER_ID
-        submit_to_testflight: true
-        submit_to_app_store: false
+    app_store_connect:
+    api_key: $APP_STORE_CONNECT_PRIVATE_KEY
+    key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER
+    issuer_id: $APP_STORE_CONNECT_ISSUER_ID
+    submit_to_testflight: true
+    submit_to_app_store: false
