--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -40,6 +40,7 @@ workflows:
         track: internal
         submit_as_draft: true
 
+
   repvx_ios_release:
     name: RepVX iOS Release
     max_build_duration: 60
@@ -51,11 +52,11 @@ workflows:
         - appstore_credentials
 
     scripts:
-      - name: Flutter dependencies
+      - name: Flutter deps
         script: flutter pub get
 
-      - name: Build iOS
-        script: flutter build ipa --release --no-codesign
+      - name: Build IPA
+        script: flutter build ipa --release --export-options-plist=ios/exportOptions.plist
 
     artifacts:
       - build/ios/ipa/*.ipa
@@ -63,7 +64,7 @@ workflows:
     publishing:
       app_store_connect:
         api_key: $APP_STORE_CONNECT_PRIVATE_KEY
-        issuer_id: $APP_STORE_CONNECT_ISSUER_ID
         key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER
+        issuer_id: $APP_STORE_CONNECT_ISSUER_ID
         submit_to_testflight: true
         submit_to_app_store: false
