--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -20,6 +20,8 @@ workflows:
       - build/app/outputs/flutter-apk/app-debug.apk
       - build/ios/iphonesimulator/Runner.app
 
+---
+
   repvx_play_release:
     name: RepVX Play Store Release
     max_build_duration: 60
@@ -40,6 +42,7 @@ workflows:
         track: internal
         submit_as_draft: true
 
+---
 
   repvx_ios_release:
     name: RepVX iOS Release
@@ -50,6 +53,8 @@ workflows:
       cocoapods: default
       groups:
         - appstore_credentials   # p8 + keyid + issuer burada saklı
+      # ÇÖZÜM SATIRI: Yüklenen sertifika ve profillerin kullanılmasını sağlar.
+      auto_code_signing: true 
 
     scripts:
       - name: Flutter deps
