--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -40,7 +40,6 @@ workflows:
         track: internal
         submit_as_draft: true
 
-  # repvx_ios_release iş akışı doğru hizada
   repvx_ios_release:
     name: RepVX iOS Release
     max_build_duration: 60
@@ -57,18 +56,9 @@ workflows:
       - name: Flutter deps
         script: flutter pub get
 
-      - name: Build iOS for archive (Final Attempt)
-        script: |
-          # flutter build ipa komutu, CodeMagic'e yüklenen sertifikaları 
-          # ve manuel olarak girilen Team ID'yi kullanarak ipa oluşturur.
-          flutter build ipa --release \
-            -t lib/main.dart \
-            # Code Signing Bilgilerini Değişken Olarak Geçirme
-            -DTEAM_ID="$TEAM_ID" \
-            -DPROVISIONING_PROFILE_SPECIFIER="$CM_PROVISIONING_PROFILE_REP_APPSTORE" \
-            -DCODE_SIGN_IDENTITY="$CM_CERTIFICATE_REP_PROD" \
-            # flutter build ipa komutunun, Team ID'yi doğru almasını sağlar
-            DEVELOPMENT_TEAM="$TEAM_ID"
+      # TEK SATIR KOMUT: Tüm imzalama parametrelerini shell hatası olmadan iletiyoruz
+      - name: Build iOS for archive (Final Solution)
+        script: flutter build ipa --release -t lib/main.dart DEVELOPMENT_TEAM="$TEAM_ID" OTHER_CODE_SIGN_FLAGS="--keychain /Library/Keychains/CM.keychain"
 
     artifacts:
       - build/ios/ipa/*.ipa
